--- a/frontend/src/styles/typography.css
+++ b/frontend/src/styles/typography.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Vend+Sans:ital,wght@0,300..700;1,300..700&display=swap');
+
 *,
 *:before,
 *:after {
