Feat: added PostCard and PostSection component.

--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -37,6 +37,10 @@
   color: var(--tan-color);
 }
 
+.navbar .links .item .link.active {
+  text-decoration: underline;
+}
+
 .navbar .profile-links {
   display: flex;
   gap: 0.5rem;
