style: pagination list component

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,7 @@
 :root {
   --tan-color: #74503c;
   --pewter-color: #EAEAF1;
+  --gray-color: #BEBEBE;
   --dark-pewter-color: #BEBED4;
   --darker-pewter-color: #8F8FAF;
   --coffee-pot-color: #67595E;
