--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,4 +12,6 @@
   --lighter-brown-color: #a18a8a;
   --red-color: #FF3131;
   --charcoal-color: #BFC2D4;
+
+  --border-default-values: 1px solid;
 }
