--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -42,7 +42,7 @@
 .footer .rights-reserved {
   margin: 0 auto;
   padding-top: 3rem;
-  border-top: 1px solid black;
+  border-top: var(--border-default-values) black;
   width: 90%;
   text-align: center;
   font-size: 0.75rem;
