--- a/frontend/src/components/UploadBox.css
+++ b/frontend/src/components/UploadBox.css
@@ -1,7 +1,7 @@
 .drop-zone {
   width: 100%;
   height: 15rem;
-  border: 1px solid var(--tan-color);
+  border: var(--border-default-values) var(--tan-color);
   display: flex;
   flex-direction: column;
   align-items: center;
