--- a/frontend/src/components/forms/PostCreateForm.css
+++ b/frontend/src/components/forms/PostCreateForm.css
@@ -17,7 +17,7 @@
 .create-post-form .post-field .post-input {
   background: none;
   border-radius: 0.31rem;
-  border: 1px solid var(--tan-color);
+  border: var(--border-default-values) var(--tan-color);
   width: 100%;
   padding: 0.65rem 1rem;
 }
