--- a/frontend/src/components/cards/LocationCard.css
+++ b/frontend/src/components/cards/LocationCard.css
@@ -4,6 +4,10 @@
   gap: 0.5rem;
 }
 
+.location-card.valid {
+  background: #1A01CC; /* TODO: change to a better UI */
+}
+
 .location-card .profile-image {
   width: 2rem;
   height: 2rem;
