style: comment section and comment card

--- a/frontend/src/components/cards/LocationCard.css
+++ b/frontend/src/components/cards/LocationCard.css
@@ -9,8 +9,8 @@
 }
 
 .location-card .profile-image {
-  width: 2rem;
-  height: 2rem;
+  width: var(--profile-image-width-and-height);
+  height: var(--profile-image-width-and-height);
   border-radius: 1.5rem;
 }
 
