--- a/frontend/src/components/sections/MapSection.css
+++ b/frontend/src/components/sections/MapSection.css
@@ -31,7 +31,7 @@
 }
 
 .map-section .add-location-btn:hover {
-  background-color: var(--darker-bronw-color);
+  background-color: var(--darker-brown-color);
 }
 
 .map-section .add-location-btn:active {
