--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,8 @@
   --lighter-brown-color: #a18a8a;
   --red-color: #ff3131;
   --charcoal-color: #bfc2d4;
+  --success-color: #46a75d;
+  --light-success-color: #d4edda;
 
   --border-default-values: 1px solid;
 
