feat: added closing option on notification message

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,8 @@
   --tan-color: #74503c;
   --pewter-color: #eaeaf1;
   --gray-color: #bebebe;
+  --light-gray-color: #e5e5e5;
+  --dark-gray-color: #4f4f4f;
   --dark-pewter-color: #bebed4;
   --darker-pewter-color: #8f8faf;
   --coffee-pot-color: #67595e;
