--- a/frontend/src/components/NotificationMessage.css
+++ b/frontend/src/components/NotificationMessage.css
@@ -1,4 +1,8 @@
 .notification-message {
+  display: none;
+}
+
+.notification-message.visible {
   padding: 1.5rem;
   border-radius: 0.5rem;
   display: flex;
@@ -6,6 +10,7 @@
   gap: 0.5rem;
   background-color: white;
   margin-top: 1.5rem;
+  position: relative;
 }
 
 .icon-container {
@@ -18,6 +23,22 @@
 
 .messageText {
   color: var(--gray-color);
+}
+
+.close-notification-btn {
+  border: none;
+  border-radius: 1.5rem;
+  background-color: var(--light-gray-color);
+  color: var(--dark-gray-color);
+  position: absolute;
+  top: 5%;
+  right: 5%;
+  padding: 0.25rem;
+  width: 1.5rem;
+  height: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .notification-message.success .icon-container {
