--- a/frontend/src/components/ProfileHero/ProfileHero.css
+++ b/frontend/src/components/ProfileHero/ProfileHero.css
@@ -16,6 +16,7 @@
   height: 6rem;
   border-radius: 12rem;
   overflow: hidden;
+  position: relative;
 }
 
 .hero-section .profile-summary .name-wrapper {
