--- a/frontend/src/components/NotificationMessage/NotificationMessage.css
+++ b/frontend/src/components/NotificationMessage/NotificationMessage.css
@@ -9,7 +9,6 @@
   align-items: center;
   gap: 0.5rem;
   background-color: white;
-  margin-top: 1.5rem;
   position: relative;
 }
 
@@ -39,6 +38,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.notification-message.success {
+  border: var(--border-default-values) var(--success-color);
 }
 
 .notification-message.success .icon-container {
