--- a/frontend/src/components/LocationPicker/LocationPicker.css
+++ b/frontend/src/components/LocationPicker/LocationPicker.css
@@ -1,8 +1,9 @@
 .leaflet-container {
   margin-top: 0.5rem;
   height: 300px;
-  width: 100%;
+  width: 100% !important;;
   border-radius: 2rem;
+  display: block;
 }
 
 .add-location-btn {
