--- a/frontend/src/components/cards/CommentCard/CommentCard.css
+++ b/frontend/src/components/cards/CommentCard/CommentCard.css
@@ -27,6 +27,15 @@
   font-size: 1.1rem;
 }
 
+.comment-card .comment-wrapper .comment-header .username .profile-link.username {
+  color: var(--coffee-pot-color);
+  transition: color 500ms ease-in-out;
+}
+
+.comment-card .comment-wrapper .comment-header .username .profile-link.username:hover {
+  color: var(--tan-color);
+}
+
 .comment-card .comment-wrapper .comment-header .date-created {
   font-size: 0.9rem;
   color: var(--tan-color);
