--- a/frontend/src/components/cards/ProfileCard/ProfileCard.css
+++ b/frontend/src/components/cards/ProfileCard/ProfileCard.css
@@ -6,6 +6,14 @@
   gap: 1rem;
   padding: 2rem 1.5rem;
   border-radius: 2rem;
+  position: relative;
+  transition: all 500ms ease-in-out;
+  cursor: pointer;
+}
+
+.profile-card:hover {
+  transform: translateY(-1rem);
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
 }
 
 .profile-card .image-container {
@@ -22,7 +30,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 0.75rem;
+  gap: 1.25rem;
   color: var(--coffee-pot-color);
 }
 
@@ -30,7 +38,32 @@
   font-size: 1.75rem;
 }
 
+.profile-card .info-wrapper .profile-meta {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+}
+
 .profile-card .info-wrapper .profile-meta .profile-type {
   display: inline-block;
+  background-color: var(--pewter-color);
+  padding: 0.1rem 0.75em;
+  border-radius: 1rem;
+}
 
+.profile-card .info-wrapper .profile-meta .country-div {
+  display: flex;
+  align-items: center;
+  gap: 0.2rem;
+}
+
+.profile-card .info-wrapper .profile-bio {
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: center;
+  font-style: italic;
+  font-weight: lighter;
 }
