--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,6 +16,8 @@
   --charcoal-color: #bfc2d4;
   --success-color: #46a75d;
   --light-success-color: #d4edda;
+  --info-color: #5BC0DE;
+  --light-info-color: #88d1ef;
 
   --border-default-values: 1px solid;
 
