feat: added notification model

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,7 +16,7 @@
   --charcoal-color: #bfc2d4;
   --success-color: #46a75d;
   --light-success-color: #d4edda;
-  --info-color: #5BC0DE;
+  --info-color: #5bc0de;
   --light-info-color: #88d1ef;
 
   --border-default-values: 1px solid;
