chore: added to send mail on location adding

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,7 +6,7 @@
   --dark-gray-color: #4f4f4f;
   --dark-pewter-color: #bebed4;
   --darker-pewter-color: #8f8faf;
-  --purple-color: #8675FF;
+  --purple-color: #8675ff;
   --coffee-pot-color: #67595e;
   --brown-color: #8c5826;
   --dark-brown-color: #7a6b6b;
