--- a/frontend/src/components/sections/PostSection/PostSection.css
+++ b/frontend/src/components/sections/PostSection/PostSection.css
@@ -11,3 +11,30 @@
 .post-section > * {
   flex-basis: 30%;
 }
+
+@media screen and (max-width: 1024px){
+  .post-section {
+    gap: 1.5em;
+    padding: 0.5rem 0.75rem;
+  }
+
+  .post-section > * {
+    flex: 1 1 45%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .post-section {
+    gap: 1em;
+    padding: 0.5rem 0.75rem;
+  }
+  .post-section > * {
+    flex-basis: 100%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .post-section {
+    padding: 1rem 0.5rem;
+  }
+}
